# discord-reminderbot

./: .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  README.md  discord-reminderbot.py  docker-compose.yml  keep_alive.py  pyproject.toml  requirements.txt  simole-reminderbot.py  start.sh  設計.md
.github/: pull_request_template.md
cogs/: remindercog.py  slashcog.py  testcog.py
cogs/modules/: aes_angou.py  remind.py  setting.py  settings.py
cogs/modules/files/: .env.sample
